--- a/Logistic_Regression_Income_Classification.ipynb
+++ b/Logistic_Regression_Income_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "68d2af0c",
+   "id": "a53ec354",
    "metadata": {},
    "source": [
     "# Income Classification using Logistic Regression\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "92de6cbb",
+   "id": "db0da6ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e920e37",
+   "id": "0e2199ca",
    "metadata": {},
    "source": [
     "#### Datasets\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "449755b9",
+   "id": "acccf93f",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5cb68d70",
+   "id": "574aac82",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a34fb846",
+   "id": "11531034",
    "metadata": {},
    "source": [
     "#### EDA and Logistic Regression Assumptions\n",
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5aa22e1c",
+   "id": "a60c6636",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f9342d4",
+   "id": "c70d2267",
    "metadata": {},
    "source": [
     "We will create predictor variables dataframe as well will take a look at categorical predictors correlations. "
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9403f55c",
+   "id": "98791708",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0a99aff2",
+   "id": "5212ad5d",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa36cfb",
+   "id": "f73c96b4",
    "metadata": {},
    "source": [
     "All the features are created from dummy variables, i.e. are 0 or 1, so scaling is not required for logistic regression.\n",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c6274660",
+   "id": "1575d3f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e38b175",
+   "id": "c2258e4d",
    "metadata": {},
    "source": [
     "#### Logistic Regression Models and Evaluation\n",
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "055fa4b6",
+   "id": "7045f6e5",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed2df55b",
+   "id": "08df5d24",
    "metadata": {},
    "source": [
     "Let's bring up confusion matrix to see numers of True Positive, False Positive, True Negative and False Negative. As well accuracy score."
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fa3a3db9",
+   "id": "590b488d",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1027593f",
+   "id": "631a6142",
    "metadata": {},
    "source": [
     "Model coefficients for predictor variables in ascending order."
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d41871bd",
+   "id": "e45510a3",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7e75ba9",
+   "id": "d9cc57f8",
    "metadata": {},
    "source": [
     "Visualization of the variable coefficients."
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9c8564e6",
+   "id": "bca22abe",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38f6f335",
+   "id": "d60a9562",
    "metadata": {},
    "source": [
     "Receiver Operating Characteristics (ROC) curve and AUC value."
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2f30ae4d",
+   "id": "1ef940f6",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6b486e7",
+   "id": "7dbd5bfd",
    "metadata": {},
    "source": [
     "Let's take a look now at some examples and try out our model."
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7b5151e9",
+   "id": "c3e12902",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
     "print('Whether or not a person makes more than $50,000? 1 Stands for Yes, 0 stands for No:',y_pred_1)\n",
     "print('Probability of a person make more than $50,000 is:', y_pred_prob_1[0][1])\n",
     "\n",
-    "# Example number 2. \n",
+    "# Example number 2. White male 22 years of age, education HS graduate \n",
     "white_male_22_hs = X[-2:-1]\n",
     "y_pred_2 = log_reg.predict(white_male_22_hs)\n",
     "y_pred_prob_2 = log_reg.predict_proba(white_male_22_hs)\n",
